{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 1420,
  "lineage": "3b3f2c84-0263-cafe-47d8-184f7ac78db3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gw_elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05aa8edcf4b7e3252",
            "domain": "vpc",
            "id": "eipalloc-05aa8edcf4b7e3252",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-233-172-115.compute-1.amazonaws.com",
            "public_ip": "18.233.172.115",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tooling-app-eks-nat-eip",
              "iac_environment": "development"
            },
            "tags_all": {
              "Name": "tooling-app-eks-nat-eip",
              "iac_environment": "development"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:858384426779:security-group/sg-00048ec044e6d8483",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-00048ec044e6d8483",
            "ingress": [],
            "name": "tooling-app-eks-cluster-2023080516164763390000000b",
            "name_prefix": "tooling-app-eks-cluster-",
            "owner_id": "858384426779",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "tooling-app-eks-cluster",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "tooling-app-eks-cluster",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0693342d6fc97c377"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:858384426779:security-group/sg-0fe2baf67c0d12b1b",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0fe2baf67c0d12b1b",
            "ingress": [],
            "name": "tooling-app-eks-node-20230805161646645700000009",
            "name_prefix": "tooling-app-eks-node-",
            "owner_id": "858384426779",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "tooling-app-eks-node",
              "Terraform": "true",
              "kubernetes.io/cluster/tooling-app-eks": "owned"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "tooling-app-eks-node",
              "Terraform": "true",
              "kubernetes.io/cluster/tooling-app-eks": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0693342d6fc97c377"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1359363148",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00048ec044e6d8483",
            "security_group_rule_id": "sgr-05ec14a2c19fabeae",
            "self": false,
            "source_security_group_id": "sg-0fe2baf67c0d12b1b",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_nodes_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3329036440",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00048ec044e6d8483",
            "security_group_rule_id": "sgr-020cf644e95bc03d4",
            "self": false,
            "source_security_group_id": "sg-0fe2baf67c0d12b1b",
            "timeouts": null,
            "to_port": 10250,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2286334121",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00048ec044e6d8483",
            "security_group_rule_id": "sgr-0d0832047d81c6fa1",
            "self": false,
            "source_security_group_id": "sg-0fe2baf67c0d12b1b",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2937082429",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fe2baf67c0d12b1b",
            "security_group_rule_id": "sgr-0e1a7ec504ea4a6d2",
            "self": false,
            "source_security_group_id": "sg-00048ec044e6d8483",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_https",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress all HTTPS to internet",
            "from_port": 443,
            "id": "sgrule-106651625",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fe2baf67c0d12b1b",
            "security_group_rule_id": "sgr-047f951469f9ad3f8",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/TCP to internet",
            "from_port": 123,
            "id": "sgrule-3649397495",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fe2baf67c0d12b1b",
            "security_group_rule_id": "sgr-0ae10d22937d03fd4",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/UDP to internet",
            "from_port": 123,
            "id": "sgrule-2803582970",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0fe2baf67c0d12b1b",
            "security_group_rule_id": "sgr-0cb09b752ccb424af",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-953058699",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fe2baf67c0d12b1b",
            "security_group_rule_id": "sgr-01647d955cdf465b0",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3064530925",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0fe2baf67c0d12b1b",
            "security_group_rule_id": "sgr-03306ea4e8aee31fb",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-4273155129",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fe2baf67c0d12b1b",
            "security_group_rule_id": "sgr-045613c7fed0e8033",
            "self": false,
            "source_security_group_id": "sg-00048ec044e6d8483",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1171462534",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fe2baf67c0d12b1b",
            "security_group_rule_id": "sgr-0d71e814613211fd9",
            "self": false,
            "source_security_group_id": "sg-00048ec044e6d8483",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2368679683",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fe2baf67c0d12b1b",
            "security_group_rule_id": "sgr-05e4f9908f0f6daab",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-695241964",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0fe2baf67c0d12b1b",
            "security_group_rule_id": "sgr-0e8e4155e17580a9d",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.self_managed_node_group[\"worker_group1\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:858384426779:security-group/sg-0c5b85eac7e9b0d45",
            "description": "Self managed node group security group",
            "egress": [],
            "id": "sg-0c5b85eac7e9b0d45",
            "ingress": [],
            "name": "tooling-app-eks-wg-node-group-2023080516164763360000000a",
            "name_prefix": "tooling-app-eks-wg-node-group-",
            "owner_id": "858384426779",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "tooling-app-eks-wg-node-group",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "tooling-app-eks-wg-node-group",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0693342d6fc97c377"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:858384426779:network-acl/acl-0a5cebbc3931eed46",
            "default_network_acl_id": "acl-0a5cebbc3931eed46",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0a5cebbc3931eed46",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "858384426779",
            "subnet_ids": [
              "subnet-003bcb69240bbf405",
              "subnet-01933cf4473f0e800",
              "subnet-03e93325b5dfb261d",
              "subnet-0605aa50b8ace6b6b",
              "subnet-06aaabc847223bf48",
              "subnet-07bddd0de4d119468",
              "subnet-08f9e270b0e29b578",
              "subnet-09c9deb410bf3d0c6"
            ],
            "tags": {
              "Name": "darey-io-eks-vpc-default",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared"
            },
            "tags_all": {
              "Name": "darey-io-eks-vpc-default",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared"
            },
            "vpc_id": "vpc-0693342d6fc97c377"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:858384426779:route-table/rtb-09d9522f3f098b67b",
            "default_route_table_id": "rtb-09d9522f3f098b67b",
            "id": "rtb-09d9522f3f098b67b",
            "owner_id": "858384426779",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "darey-io-eks-vpc-default",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared"
            },
            "tags_all": {
              "Name": "darey-io-eks-vpc-default",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0693342d6fc97c377"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:858384426779:security-group/sg-09892b949bdc74f6f",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-09892b949bdc74f6f",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "858384426779",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "darey-io-eks-vpc-default",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared"
            },
            "tags_all": {
              "Name": "darey-io-eks-vpc-default",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared"
            },
            "vpc_id": "vpc-0693342d6fc97c377"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:858384426779:internet-gateway/igw-048c73c8c7c8a94ca",
            "id": "igw-048c73c8c7c8a94ca",
            "owner_id": "858384426779",
            "tags": {
              "Name": "darey-io-eks-vpc",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared"
            },
            "tags_all": {
              "Name": "darey-io-eks-vpc",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared"
            },
            "vpc_id": "vpc-0693342d6fc97c377"
          },
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05aa8edcf4b7e3252",
            "association_id": "eipassoc-0d01d2a07ab0f50ce",
            "connectivity_type": "public",
            "id": "nat-0db35fe7e7750aee3",
            "network_interface_id": "eni-0dd2ea80d36048c4a",
            "private_ip": "10.0.154.67",
            "public_ip": "18.233.172.115",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07bddd0de4d119468",
            "tags": {
              "Name": "darey-io-eks-vpc-us-east-1a",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared"
            },
            "tags_all": {
              "Name": "darey-io-eks-vpc-us-east-1a",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared"
            }
          },
          "dependencies": [
            "aws_eip.nat_gw_elastic_ip",
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03971ba5e13d18aa51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0db35fe7e7750aee3",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03971ba5e13d18aa5",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gw_elastic_ip",
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-048c73c8c7c8a94ca",
            "id": "r-rtb-00e021c5208651dab1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00e021c5208651dab",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:858384426779:route-table/rtb-03971ba5e13d18aa5",
            "id": "rtb-03971ba5e13d18aa5",
            "owner_id": "858384426779",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "darey-io-eks-vpc-private",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared"
            },
            "tags_all": {
              "Name": "darey-io-eks-vpc-private",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0693342d6fc97c377"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:858384426779:route-table/rtb-00e021c5208651dab",
            "id": "rtb-00e021c5208651dab",
            "owner_id": "858384426779",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "darey-io-eks-vpc-public",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared"
            },
            "tags_all": {
              "Name": "darey-io-eks-vpc-public",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0693342d6fc97c377"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08267f1e64930a4b0",
            "route_table_id": "rtb-03971ba5e13d18aa5",
            "subnet_id": "subnet-03e93325b5dfb261d"
          },
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e6c57376f61cf43c",
            "route_table_id": "rtb-03971ba5e13d18aa5",
            "subnet_id": "subnet-003bcb69240bbf405"
          },
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00969bb9882f6b6d1",
            "route_table_id": "rtb-03971ba5e13d18aa5",
            "subnet_id": "subnet-09c9deb410bf3d0c6"
          },
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07d9b581d917c7fb3",
            "route_table_id": "rtb-03971ba5e13d18aa5",
            "subnet_id": "subnet-01933cf4473f0e800"
          },
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01411265f24c30260",
            "route_table_id": "rtb-00e021c5208651dab",
            "subnet_id": "subnet-07bddd0de4d119468"
          },
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e71a0f889450696",
            "route_table_id": "rtb-00e021c5208651dab",
            "subnet_id": "subnet-0605aa50b8ace6b6b"
          },
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e49f80b1b5d3b25",
            "route_table_id": "rtb-00e021c5208651dab",
            "subnet_id": "subnet-08f9e270b0e29b578"
          },
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02b59f6f90c07d33d",
            "route_table_id": "rtb-00e021c5208651dab",
            "subnet_id": "subnet-06aaabc847223bf48"
          },
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:858384426779:subnet/subnet-03e93325b5dfb261d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03e93325b5dfb261d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "858384426779",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "darey-io-eks-vpc-private-us-east-1a",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "darey-io-eks-vpc-private-us-east-1a",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0693342d6fc97c377"
          },
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:858384426779:subnet/subnet-003bcb69240bbf405",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-003bcb69240bbf405",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "858384426779",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "darey-io-eks-vpc-private-us-east-1b",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "darey-io-eks-vpc-private-us-east-1b",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0693342d6fc97c377"
          },
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:858384426779:subnet/subnet-09c9deb410bf3d0c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.80.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09c9deb410bf3d0c6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "858384426779",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "darey-io-eks-vpc-private-us-east-1c",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "darey-io-eks-vpc-private-us-east-1c",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0693342d6fc97c377"
          },
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:858384426779:subnet/subnet-01933cf4473f0e800",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.64.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01933cf4473f0e800",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "858384426779",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "darey-io-eks-vpc-private-us-east-1f",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "darey-io-eks-vpc-private-us-east-1f",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0693342d6fc97c377"
          },
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:858384426779:subnet/subnet-07bddd0de4d119468",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.144.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07bddd0de4d119468",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "858384426779",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "darey-io-eks-vpc-public-us-east-1a",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "darey-io-eks-vpc-public-us-east-1a",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0693342d6fc97c377"
          },
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:858384426779:subnet/subnet-0605aa50b8ace6b6b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.176.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0605aa50b8ace6b6b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "858384426779",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "darey-io-eks-vpc-public-us-east-1b",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "darey-io-eks-vpc-public-us-east-1b",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0693342d6fc97c377"
          },
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:858384426779:subnet/subnet-08f9e270b0e29b578",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.208.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f9e270b0e29b578",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "858384426779",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "darey-io-eks-vpc-public-us-east-1c",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "darey-io-eks-vpc-public-us-east-1c",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0693342d6fc97c377"
          },
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:858384426779:subnet/subnet-06aaabc847223bf48",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.192.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06aaabc847223bf48",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "858384426779",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "darey-io-eks-vpc-public-us-east-1f",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "darey-io-eks-vpc-public-us-east-1f",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0693342d6fc97c377"
          },
          "dependencies": [
            "data.aws_availability_zones.available_azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:858384426779:vpc/vpc-0693342d6fc97c377",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a5cebbc3931eed46",
            "default_route_table_id": "rtb-09d9522f3f098b67b",
            "default_security_group_id": "sg-09892b949bdc74f6f",
            "dhcp_options_id": "dopt-075240a47f3e24760",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0693342d6fc97c377",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09d9522f3f098b67b",
            "owner_id": "858384426779",
            "tags": {
              "Name": "darey-io-eks-vpc",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared"
            },
            "tags_all": {
              "Name": "darey-io-eks-vpc",
              "iac_environment": "development",
              "kubernetes.io/cluster/tooling-app-eks": "shared"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}